--- a/clientTest/src/assets/scss/black-dashboard-react/custom/_variables.scss
+++ b/clientTest/src/assets/scss/black-dashboard-react/custom/_variables.scss
@@ -464,7 +464,7 @@ $mark-bg:                     #fcf8e3 !default;
 $hr-margin-y:                 $spacer * 2 !default;
 
 
-// Icons
+// Users
 
 $icon-size:                 auto       !default;
 $icon-size-regular:         2.375rem      !default;
